# arbez-sdk-python

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  bundled_model.lock.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  wechat-sigabrt-hunt.yml
constraints/: floor.txt
docs/: README.md  api-reference.md  bring-your-own-weights.md  concepts.md  consensus-rules.md  getting-started.md  how-to.md  installation.md  profiling.md  troubleshooting.md
examples/: _bench_pdf.py  _bench_samples.py  _bench_style.py  _corpus_source.py  _decode_metrics.py  _gt_scoring.py  arbez_benchmark.py  arbez_benchmark3.py  custom_engine.py  five_liner.py  five_liner_smoke.py  multi_code_benchmark.py  scan_image.py
src/arbez/: __init__.py  _engine_discovery.py  acceleration.py  consensus.py  exceptions.py  parallelism.py  scanner.py  types.py
src/arbez/_assets/: NOTICE  __init__.py
src/arbez/backends/: __init__.py
src/arbez/engines/: __init__.py  _rtdetr.py  _yolo11.py  _yolox.py  apple_vision.py  arbez.py  base.py  formats.py  helpers.py  wechat.py  zxing.py
src/arbez/testing/: __init__.py  _corpus.py
tests/: __init__.py  _corpus.py  _engine_availability.py  conftest.py  test_acceleration.py  test_apple_vision.py  test_apple_vision_init.py  test_arbez_dmtx_routing.py  test_arbez_engine.py  test_arbez_engine_init.py  test_arbez_symbology_reconciliation.py  test_arch_review.py  test_bench3_engines_filter.py  test_bench_pdf.py  test_bench_style.py  test_code_review.py  test_consensus.py  test_consensus_selection.py  test_corpus.py  test_corpus_composite.py  test_corpus_source.py  test_decode_metrics.py  test_engine_protocol.py  test_formats.py  test_fuzz.py  test_gt_scoring.py  test_input_types.py  test_libdmtx_fallback_gate.py  test_no_print_unicode.py  test_parallelism.py  test_preprocess.py  test_public_testing.py  test_pytest_wechat_isolated.py  test_review_pass.py  test_scanner_auto.py  test_smoke.py  test_threading.py  test_wechat.py  test_wechat_init.py  test_zxing.py
tools/: analyze_decode_rescue.py  archive_shipped_model.py  audit_wheels.py  check_stale_api_docs.py  clean_bundled_model.py  convert_ckpt_to_onnx.py  profile_scan.py  pytest_wechat_isolated.py  sync_bundled_model.py
tools/ci/: wechat_sigabrt_hunt_gha.sh
